--- a/templates/members.html
+++ b/templates/members.html
@@ -9,48 +9,58 @@
     <link rel="stylesheet" href="/static/styles.css">
 </head>
 <body>
-    <div class="container mt-4">
-        <div class="row g-3">
-            <h1 class="col-auto">Members Management</h1>
-            <button class="btn col-auto" style="background-color: #33312E; color: #E0E2DB; text-align: right;" onclick="window.location.href='/'">返回出席表</button>
+    <main class="container">
+        <h1 class="mb-4">Members Management</h1>
+        <button class="btn col-auto" style="background-color: #33312E; color: #E0E2DB; text-align: right;" onclick="window.location.href='/'">返回出席表</button>
+        
+        <!-- -------------------------------------------------------------------------------------------------------- -->
+        <div class="mt-4">
+            <h5>新增成員</h5>
+            <form id="memberForm" class="row g-3">                
+                <div class="col-md-4">
+                    <!-- <label for="name">Name:</label> -->
+                    <select class="form-select" id="name" required>
+                        <!-- Options will be populated dynamically -->
+                    </select>
+                </div>
+                
+                <!-- <div class="col-md-2">
+                    <select class="form-select" id="gender">
+                        <option value="male">男</option>
+                        <option value="female">女</option>
+                    </select>
+                </div> -->
+                
+                <div class="col-md-2">
+                    <!-- <label for="side">Side:</label> -->
+                    <select class="form-select" id="side" required>
+                        <option value="Left">左</option>
+                        <option value="Right">右</option>
+                        <option value="none">未定</option>
+                    </select>
+                </div>
+                
+                <div class="col-md-2">
+                    <!-- <label for="weight">Weight:</label> -->
+                    <input class="form-control" type="number" id="weight" placeholder="Weight" step="0.1" required>
+                </div>
+                
+                <div class="col-md-2">
+                    <!-- <label for="category">Category:</label> -->
+                    <select id="category" name="category" class="form-control" required>
+                        <option value="One">1隊</option>
+                        <option value="Two">2隊</option>
+                        <option value="none">None</option>
+                    </select>
+                </div>
+
+                
+                <div class="col-md-2">
+                    <button type="submit" class="btn btn-primary">Add Member</button>
+                </div>
+            </form>
         </div>
-    
-        <form id="memberForm" class="row g-3">
-            
-            <div class="col-auto">
-                <label for="name">Name:</label>
-                <select class="form-select" id="name" required>
-                    <!-- Options will be populated dynamically -->
-                </select>
-            </div>
-            
-            <div class="col-auto">
-                <label for="side">Side:</label>
-                <select class="form-select" id="side" required>
-                    <option value="Left">左</option>
-                    <option value="Right">右</option>
-                    <option value="none">未定</option>
-                </select>
-            </div>
-            
-            <div class="col-auto">
-                <label for="weight">Weight:</label>
-                <input class="form-control" type="number" id="weight" placeholder="Weight" step="0.1" required>
-            </div>
-            
-            <div class="col-auto">
-                <label for="category">Category:</label>
-                <select id="category" name="category" class="form-control" required>
-                    <option value="One">1隊</option>
-                    <option value="Two">2隊</option>
-                    <option value="none">None</option>
-                </select>
-            </div>
-            
-            <div class="col-auto">
-                <button type="submit" class="btn btn-primary">Add Member</button>
-            </div>
-        </form>
+        <!-- -------------------------------------------------------------------------------------------------------- -->
         
         <h2>Current Members</h2>
         <table id="membersTable" class="table table-sm table-bordered">
@@ -69,7 +79,7 @@
             </tbody>
         </table>
         <button class="btn" style="background-color: #33312E; color: #E0E2DB;" onclick="window.location.href='/'">返回出席表</button>
-    </div>
+    </main>
     <footer class="mt-4">
         <div class="text-center p-3">
             <p>&copy; 2024 Paddle Zelos | Developed by yunjung906</p>
